<resources>
    <string name="app_name" translatable="false">Memories of Location</string>
    <string name="access_token" translatable="false" >pk.eyJ1Ijoibm9ybWFsY2xvbmUiLCJhIjoiY2s1MnBhaHh1MDA4eDNtcXRkN2w3cnhmZiJ9.85mOapfwMm8ly7W3GNZlmw</string>
    <string name="google_api" translatable="false">AIzaSyAYFaGdkbUT63qa-OUh5NvmgVkRtHu0U3w</string>
    <string name="navigation_drawer_open" translatable="false">Open drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close drawer</string>

    <string name="edit_picture">Edit picture</string>
    <string name="delete_picture">Delete picture</string>

    <string name="zero_result">There no result from Google</string>
    <string name="out_of_api">API limited</string>

<!--    navigation-->
    <string name="list_stop">List stop</string>
    <string name="close">Close</string>
    <string name="add_to_stop_list_fail">Maximum number of coordinates is 3</string>
    <string name="latlng">Coordinate: </string>
    <string name="map_stop">Map stop</string>
    <string name="add_to_stop_list">Stop added</string>
    <string name="nav_cancel">Canceled</string>

<!--    memory detail-->
    <string name="memory_edit_title">Enter new Infomation</string>
    <string name="delete">Delete</string>
    <string name="search_saved_data">Saved locations</string>
    <string name="search_google_data">From Google</string>
    <string name="memory_detail_add_img">Add</string>


    <!--    photo editor-->
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>>
<!--    location detail-->
    <string name="failure">Failure</string>
    <string name="success">Success</string>
    <string name="ask_delete_picture">Do you want to delete this picture?</string>
    <string name="location_info">Information</string>
    <string name="list_memories">Memories</string>
    <string name="location_images">Images</string>
    <string name="edit_this_location">Edit this location</string>
    <string name="confirm">Confirm</string>
    <string name="change_success">Change information success!</string>
    <string name="change_fail">Change information fail!</string>
    <string name="find_the_way">Find the Way</string>
    <string name="distance_not_allow_director">Your target location smaller than 10m! Find it your self please</string>

<!--    list activity-->
    <string name="save_img_success">Image Saved Successfully</string>
    <string name="save_img_fail">Failed to save Image</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="loading">Loading...</string>
    <string name="list_location">List of Locations</string>
    <string name="list_memory">List of Memories</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="notice">Notice</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit">Edit</string>
    <string name="ok">Ok</string>
    <string name="menu_item_title">Enter new name</string>
    <string name="menu_item_delete_confirm">Delete location will delete all memories of it</string>

<!--    main activity-->
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="tool">Tool</string>
    <string name="setting">Setting</string>
    <string name="hint_search">Search here...</string>
    <string name="tooltip_fab_save_location">Save current location                   </string>
    <string name="open_list_location">Open List Location</string>
    <string name="open_list_memory">Open List Memory</string>
    <string name="get_app_info">App information</string>
    <string name="how_to_use">How to use?</string>
    <string name="author_information">Author information</string>
    <string name="dialog_location_nearby_title">Some saved locations nearby found</string>
    <string name="dialog_location_nearby_message">Choose one if you want to override locations nearby.</string>
    <string name="dialog_location_nearby_pass_button">No, create new</string>
    <string name="DD">DD: </string>
    <string name="location_turn_off">Your GPS is off.</string>
    <string name="location_turn_off_positive">Turn it on</string>
    <string name="no_permission">No Permission! Auto close</string>

    <!--    activity add location-->
    <string name="save_location_toolbar_add">Add New Location</string>
    <string name="save_location_toolbar_edit">Edit Location</string>
    <string name="hint_location_name">Location name</string>
    <string name="hint_discovery_date">Discovery date</string>
    <string name="save_this_location">Save This Location!</string>
    <string name="err_location_required">Location name required!</string>
    <string name="err_created_at_required">Wrong datetime format!</string>
    <string name="rs_success_save_location">Success to save location: </string>
    <string name="rs_success_override_location">Success to override location: </string>
    <string name="rs_fail_save_location">Fail to save location: </string>
    <string name="rs_fail_override_location">Fail to override location: </string>

<!--    activity add memory-->
    <string name="save_memory_toolbar_add">Add New Memory</string>
    <string name="save_memory_toolbar_edit">Edit Memory</string>
    <string name="hint_memory_title">Memory title</string>
    <string name="hint_memory_content">How do you feel?</string>
    <string name="tooltip_memory_add_image">Add Image</string>
    <string name="save_this_memory">Save This Memory!</string>
    <string name="err_memory_title_required">Title required!</string>
    <string name="rs_success_save_memory">Success to save memory: </string>
    <string name="dialog_add_picture_title">Add Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
</resources>
