<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:navigationIcon="@drawable/ic_keyboard_backspace_black_24dp"
            app:title="@string/save_location_toolbar_add"
            android:background="@color/colorEmpty"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtlo_location_name"
                    app:errorEnabled="true"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_location_on_black_24dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/hint_location_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_location_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtlo_created_at"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@null"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_edit_black_24dp"
                    app:endIconContentDescription="Edit datetime"
                    app:startIconDrawable="@drawable/ic_alarm_black_24dp"
                    android:hint="@string/hint_discovery_date">

                        <com.google.android.material.textfield.TextInputEditText
                            android:enabled="false"
                            android:textColor="#000"
                            android:id="@+id/edt_created_at"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save_location"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:strokeColor="#000"
                    android:text="@string/save_this_location"/>
        </LinearLayout>
</RelativeLayout>
