<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.app.view.MainActivity"
    tools:openDrawer="start"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/status_bar"
            android:elevation="4dp"
            android:layout_height="10dp"
            android:layout_width="match_parent"
            android:background="#000"
            android:alpha="0.3"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:elevation="4dp"
            app:contentInsetStartWithNavigation="0dp"
            android:layout_marginTop="@dimen/toolbar_top_margin"
            android:layout_marginLeft="@dimen/toolbar_left_right_margin"
            android:layout_marginRight="@dimen/toolbar_left_right_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_toolbar"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginRight="6dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/edt_search"
                    android:hint="@string/hint_search"
                    android:background="#fff"
                    android:maxLines="1"
                    android:inputType="text"
                    android:imeOptions="actionSearch"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:textSize="18sp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingRight="56dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:textCursorDrawable="@drawable/text_cursor"
                    />

                <ImageButton
                    android:id="@+id/search_button"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="-56dp"
                    android:background="#FFFFFF"
                    android:foreground="@drawable/ripple"
                    android:src="@drawable/ic_search" />
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
        <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            mapbox:mapbox_cameraTargetLat="20.9931882"
            mapbox:mapbox_cameraTargetLng="105.7794761"
            mapbox:mapbox_cameraZoom="12"
            >

            <LinearLayout
                android:id="@+id/fab_zone"
                android:orientation="vertical"
                android:layout_gravity="bottom|end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_save_location"
                    app:backgroundTint="@color/colorEmpty"
                    android:src="@drawable/ic_pin_drop_black_24dp"
                    android:foreground="@drawable/ripple"
                    android:background="@color/colorEmpty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tooltipText="@string/tooltip_fab_save_location"
                    android:layout_margin="@dimen/fab_margin" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_director"
                    app:backgroundTint="@color/colorEmpty"
                    android:src="@drawable/ic_directions_black_24dp"
                    android:foreground="@drawable/ripple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_reLocation"
                    android:src="@drawable/ic_gps_fixed_black_24dp"
                    app:backgroundTint="@color/colorEmpty"
                    android:foreground="@drawable/ripple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fab_director_zone"
                android:orientation="vertical"
                android:layout_gravity="bottom|start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_start_navigate"
                    app:backgroundTint="@color/colorPrimary"
                    app:tint="@color/colorEmpty"
                    android:src="@drawable/ic_navigation_white_24dp"
                    android:foreground="@drawable/ripple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tooltipText="@string/tooltip_fab_save_location"
                    android:layout_margin="@dimen/fab_margin"
                    />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_add_stop"
                    app:backgroundTint="@color/colorPrimary"
                    app:tint="@color/colorEmpty"
                    android:src="@drawable/ic_add_white_24dp"
                    android:foreground="@drawable/ripple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_director_list"
                    android:src="@drawable/ic_format_list_bulleted_black_24dp"
                    app:tint="@color/colorEmpty"
                    app:backgroundTint="@color/colorPrimary"
                    android:foreground="@drawable/ripple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_cancel"
                    android:src="@drawable/ic_clear_white_24dp"
                    app:tint="@color/colorEmpty"
                    android:tooltipText="@string/cancel"
                    app:backgroundTint="@color/colorPrimary"
                    android:foreground="@drawable/ripple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin" />

            </LinearLayout>
            <View
                android:id="@+id/ripple_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorEmpty"
                android:elevation="8dp"
                android:visibility="invisible" />
        </com.mapbox.mapboxsdk.maps.MapView>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/search_recycler_view_holder"
            android:layout_below="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu"
        />
</androidx.drawerlayout.widget.DrawerLayout>